feat: LINE 通知新增 Broadcast 模式（所有好友都收到）
- 新增 send_line_broadcast() 函數（使用 /v2/bot/message/broadcast）
- CLI 新增 --broadcast flag，廣播不需要 LINE_USER_ID
- 保留原有 push 模式向後相容
- SKILL.md 步驟 7b 改用 --broadcast 發送
- 新增 10 個 broadcast 測試（TDD），總計 130 Python tests passed
- 更新 .env.example、CLAUDE.md 文件

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ ANTHROPIC_API_KEY=sk-ant-xxx
 
 # LINE Messaging API
 LINE_CHANNEL_ACCESS_TOKEN=your_line_channel_access_token
+# LINE_USER_ID 僅 push 模式需要（使用 --broadcast 時不需要）
 LINE_USER_ID=U1234567890abcdef1234567890abcdef
 
 # Telegram Bot
